<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.hh.testapponlineshop.viewModels.CatalogViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:background="@color/white"
        tools:context=".views.contentFragments.CatalogFragment">

        <AutoCompleteTextView
            android:id="@+id/sort_items_menu"
            style="@style/Title4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_sort_menu"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:clickable="true"
            android:drawableStart="@drawable/sort_icon"
            android:drawableEnd="@drawable/sort_items_down_arrow"
            android:focusable="false"
            android:inputType="none"
            android:textColor="@color/dark_grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/filter_tv"
            style="@style/Title4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@string/Filters_text"
            app:drawableStartCompat="@drawable/filter_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <HorizontalScrollView
            android:id="@+id/tag_group_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sort_items_menu">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/tags_group"
                style="@style/Widget.Material3.ChipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/tag_all"
                    style="@style/ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/watch_all_text" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/tag_face"
                    style="@style/ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/face_text" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/tag_body"
                    style="@style/ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/body_text" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/tag_suntan"
                    style="@style/ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/suntan_text" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/tag_mask"
                    style="@style/ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mask_text" />
            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/catalog_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tag_group_scroll_view"
            app:spanCount="2"
            tools:listitem="@layout/catalog_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>