<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.hh.testapponlineshop.viewModels.RegistrationViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:background="@color/white"
        tools:context=".views.mainFragments.RegistrationFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/name_text"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.name}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/surname_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/surname_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/surname_text"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.surname}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_number_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_number_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/phonenumber_text"
                    android:inputType="phone"
                    android:text="@={viewModel.phoneNumber}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/enterButton"
                style="@style/ButtonText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button_state_colors"
                android:enabled="false"
                android:onClick="@{() -> viewModel.onEnterClick()}"
                android:padding="15dp"
                android:text="@string/login_text"
                android:textColor="@color/white"
                app:cornerRadius="8dp" />
        </LinearLayout>

        <TextView
            style="@style/Caption1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/info_text_loyal_program_terms"
            android:textAlignment="center"
            android:textColor="@color/grey" />

    </RelativeLayout>
</layout>