<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.hh.testapponlineshop.viewModels.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".views.contentFragments.ProfileFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/profile_card"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="30dp"
                app:cardBackgroundColor="@color/light_grey"
                app:cardCornerRadius="8dp"
                app:strokeWidth="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/profile_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:contentDescription="@string/profile_icon_content_description"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/profile_icon" />

                    <TextView
                        android:id="@+id/name_tv"
                        style="@style/Title2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text='@{viewModel.name + " " + viewModel.surname}'
                        app:layout_constraintBottom_toTopOf="@id/phone_number_tv"
                        app:layout_constraintStart_toEndOf="@id/profile_icon"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/phone_number_tv"
                        style="@style/Caption1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@{viewModel.phoneNumber}"
                        android:textColor="@color/grey"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/profile_icon"
                        app:layout_constraintTop_toBottomOf="@id/name_tv" />

                    <ImageView
                        android:id="@+id/logout_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/log_out_button_content_description"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/logout_icon" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/favourites_card"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/light_grey"
                app:cardCornerRadius="8dp"
                app:strokeWidth="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/favourite_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:contentDescription="@string/favourite_icon_content_description"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/favourite_uncheck_icon" />

                    <TextView
                        android:id="@+id/favourite_tv"
                        style="@style/Title2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/favourite_text"
                        app:layout_constraintBottom_toTopOf="@id/favourites_amount_tv"
                        app:layout_constraintStart_toEndOf="@id/favourite_icon"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/favourites_amount_tv"
                        style="@style/Caption1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text='@{viewModel.itemsFavouriteAmount}'
                        android:textColor="@color/grey"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/favourite_icon"
                        app:layout_constraintTop_toBottomOf="@id/favourite_tv" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/right_arrow_content_description"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/right_arrow_icon" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/shops_card"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/light_grey"
                app:cardCornerRadius="8dp"
                app:strokeWidth="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/shop_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:contentDescription="@string/shop_icon_content_description"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/shop_icon" />

                    <TextView
                        android:id="@+id/shops_tv"
                        style="@style/Title2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/shops_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/shop_icon"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/right_arrow_content_description"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/right_arrow_icon" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/feedback_card"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/light_grey"
                app:cardCornerRadius="8dp"
                app:strokeWidth="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/feedback_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:contentDescription="@string/feedback_icon_content_description"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/feedback_icon" />

                    <TextView
                        android:id="@+id/feedback_tv"
                        style="@style/Title2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/feedback_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/feedback_icon"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/right_arrow_content_description"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/right_arrow_icon" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/offer_card"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/light_grey"
                app:cardCornerRadius="8dp"
                app:strokeWidth="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/offer_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:contentDescription="@string/offer_icon_content_description"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/offer_icon" />

                    <TextView
                        android:id="@+id/offer_tv"
                        style="@style/Title2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/offer_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/offer_icon"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/right_arrow_content_description"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/right_arrow_icon" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/refund_card"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:cardBackgroundColor="@color/light_grey"
                app:cardCornerRadius="8dp"
                app:strokeWidth="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/refund_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:contentDescription="@string/refund_icon_content_description"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/refund_icon" />

                    <TextView
                        android:id="@+id/refund_tv"
                        style="@style/Title2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/refund_product_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/refund_icon"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/right_arrow_content_description"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/right_arrow_icon" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logout_button"
            style="@style/ButtonText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/light_grey"
            android:onClick="@{() -> viewModel.onLogoutClick()}"
            android:padding="15dp"
            android:text="@string/delete_acc"
            android:textColor="@color/black"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>